# aubio_flutter

./: CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/lib/: main.dart
ios/: aubio_flutter.podspec
ios/Classes/: aubio_flutter.c
lib/: aubio_flutter.dart  aubio_flutter_bindings_generated.dart
lib/src/: processor.dart
src/: CMakeLists.txt  aubio_flutter.c  aubio_flutter.h
src/aubio-c/: aubio.h  aubio_priv.h
